--- a/index.html
+++ b/index.html
@@ -6,9 +6,389 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/webp" href="/favicon.webp" />
 
-  <title>Adventure Quest Hub</title>
+  <!-- Primary SEO Meta Tags -->
+  <title>Simba Adventures | Book Secure Safari & Adventure Tours in Kenya | Maasai Mara, Amboseli & Custom Itineraries
+  </title>
+  <meta name="title" content="Simba Adventures | Book Secure Safari & Adventure Tours in Kenya" />
+  <meta name="description"
+    content="Book secure, customizable safari and adventure tours in Kenya and East Africa. Explore Maasai Mara, Amboseli, Mount Kenya with expert local guides. Flexible booking, secure payments, and personalized itineraries. Trusted by 10,000+ travelers." />
+  <meta name="keywords"
+    content="Kenya safari, Maasai Mara safari, Amboseli safari, safari booking Kenya, secure safari booking, customizable safari tours, adventure tours East Africa, Kenya travel agency, Mount Kenya expedition, wildlife safari Kenya" />
+  <meta name="author" content="Simba Adventures" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <link rel="canonical" href="https://simba-adventures.vercel.app/" />
 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://simba-adventures.vercel.app/" />
+  <meta property="og:title" content="Simba Adventures | Book Secure Safari & Adventure Tours in Kenya" />
+  <meta property="og:description"
+    content="Book secure, customizable safari and adventure tours in Kenya and East Africa. Explore Maasai Mara, Amboseli, Mount Kenya with expert local guides." />
+  <meta property="og:image" content="https://simba-adventures.vercel.app/og-image.jpg" />
+  <meta property="og:site_name" content="Simba Adventures" />
+  <meta property="og:locale" content="en_US" />
 
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://simba-adventures.vercel.app/" />
+  <meta property="twitter:title" content="Simba Adventures | Book Secure Safari & Adventure Tours in Kenya" />
+  <meta property="twitter:description"
+    content="Book secure, customizable safari and adventure tours in Kenya and East Africa. Explore Maasai Mara, Amboseli, Mount Kenya with expert local guides." />
+  <meta property="twitter:image" content="https://simba-adventures.vercel.app/og-image.jpg" />
+
+  <!-- Additional SEO Tags for AI Crawlers -->
+  <meta name="ai-content-declaration" content="Human-curated travel experiences with verified local partnerships" />
+  <meta name="geo.region" content="KE" />
+  <meta name="geo.placename" content="Nairobi, Kenya" />
+  <meta name="geo.position" content="-1.286389;36.817223" />
+  <meta name="ICBM" content="-1.286389, 36.817223" />
+
+  <!-- JSON-LD Structured Data: TravelAgency Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "TravelAgency",
+    "@id": "https://simba-adventures.vercel.app/#organization",
+    "name": "Simba Adventures",
+    "alternateName": "Simba Adventures Kenya",
+    "url": "https://simba-adventures.vercel.app",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://simba-adventures.vercel.app/favicon.webp",
+      "width": 512,
+      "height": 512
+    },
+    "image": "https://simba-adventures.vercel.app/og-image.jpg",
+    "description": "Premier safari and adventure tour operator specializing in customizable Kenya and East Africa experiences. Expert-guided tours to Maasai Mara, Amboseli, Mount Kenya with secure online booking.",
+    "slogan": "Discover Africa's Wild Heart",
+    "foundingDate": "2024",
+    "areaServed": [
+      {
+        "@type": "Country",
+        "name": "Kenya"
+      },
+      {
+        "@type": "Country",
+        "name": "Tanzania"
+      },
+      {
+        "@type": "GeoCircle",
+        "geoMidpoint": {
+          "@type": "GeoCoordinates",
+          "latitude": -1.286389,
+          "longitude": 36.817223
+        },
+        "geoRadius": "1500 km",
+        "name": "East Africa Region"
+      }
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Nairobi",
+      "addressLocality": "Nairobi",
+      "addressRegion": "Nairobi County",
+      "postalCode": "00100",
+      "addressCountry": "KE"
+    },
+    "contactPoint": [
+      {
+        "@type": "ContactPoint",
+        "telephone": "+254-700-000-000",
+        "contactType": "customer service",
+        "availableLanguage": ["English", "Swahili"],
+        "areaServed": "Worldwide"
+      },
+      {
+        "@type": "ContactPoint",
+        "telephone": "+254-700-000-001",
+        "contactType": "reservations",
+        "availableLanguage": ["English", "Swahili"]
+      }
+    ],
+    "sameAs": [
+      "https://github.com/derrickgitonga/SimbaAdventures",
+      "https://www.linkedin.com/company/simba-adventures"
+    ],
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Safari & Adventure Tours",
+      "itemListElement": [
+        {
+          "@type": "OfferCatalog",
+          "name": "Maasai Mara Safaris",
+          "description": "Walking safaris, game drives, and cultural experiences in the world-famous Maasai Mara"
+        },
+        {
+          "@type": "OfferCatalog",
+          "name": "Mountain Expeditions",
+          "description": "Mount Kenya and Kilimanjaro climbing adventures with certified guides"
+        },
+        {
+          "@type": "OfferCatalog",
+          "name": "Custom Itineraries",
+          "description": "Fully customizable safari packages tailored to your preferences and budget"
+        }
+      ]
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.8",
+      "bestRating": "5",
+      "worstRating": "1",
+      "ratingCount": "843",
+      "reviewCount": "632"
+    },
+    "priceRange": "$89 - $2899",
+    "paymentAccepted": ["Credit Card", "Debit Card", "M-Pesa", "PayPal", "Bank Transfer"],
+    "currenciesAccepted": "USD, EUR, GBP, KES",
+    "openingHours": "Mo-Su 08:00-20:00"
+  }
+  </script>
+
+  <!-- JSON-LD Structured Data: Product Schema - Maasai Mara Safari -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "TouristTrip",
+    "@id": "https://simba-adventures.vercel.app/tours/maasai-mara-walking",
+    "name": "Maasai Mara Walking Safari",
+    "description": "An intimate 4-day walking safari experience in the world-famous Maasai Mara. Walk with experienced Maasai guides through the savannah, tracking wildlife on foot. Witness the Great Migration and experience authentic cultural interactions.",
+    "url": "https://simba-adventures.vercel.app/tours/maasai-mara-walking",
+    "image": [
+      "https://images.unsplash.com/photo-1516426122078-c23e76319801?w=1200&q=80"
+    ],
+    "touristType": ["Adventure Travelers", "Wildlife Enthusiasts", "Cultural Tourists"],
+    "itinerary": {
+      "@type": "ItemList",
+      "numberOfItems": 4,
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Day 1: Arrival at Mara",
+          "description": "Fly into Mara, afternoon game drive to camp"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Day 2: Walking Safari",
+          "description": "Full day walking safari with Maasai guides"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Day 3: Migration Tracking",
+          "description": "Early morning walk, afternoon game drive"
+        },
+        {
+          "@type": "ListItem",
+          "position": 4,
+          "name": "Day 4: Departure",
+          "description": "Morning walk, fly back to Nairobi"
+        }
+      ]
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "899",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock",
+      "validFrom": "2026-01-01",
+      "validThrough": "2026-12-31",
+      "seller": {
+        "@type": "TravelAgency",
+        "name": "Simba Adventures"
+      },
+      "itemCondition": "https://schema.org/NewCondition",
+      "hasMerchantReturnPolicy": {
+        "@type": "MerchantReturnPolicy",
+        "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+        "merchantReturnDays": 30,
+        "returnMethod": "https://schema.org/ReturnByMail",
+        "returnFees": "https://schema.org/FreeReturn"
+      }
+    },
+    "provider": {
+      "@type": "TravelAgency",
+      "name": "Simba Adventures",
+      "url": "https://simba-adventures.vercel.app"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.8",
+      "bestRating": "5",
+      "reviewCount": "203"
+    },
+    "duration": "P4D",
+    "maximumAttendeeCapacity": 8,
+    "subjectOf": {
+      "@type": "CreativeWork",
+      "name": "Maasai Mara Safari Guide",
+      "description": "How to Book a Secure Safari in Kenya's Maasai Mara"
+    }
+  }
+  </script>
+
+  <!-- JSON-LD Structured Data: Product Schema - Amboseli Safari -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "TouristTrip",
+    "@id": "https://simba-adventures.vercel.app/tours/amboseli-safari",
+    "name": "Amboseli Elephant Safari Experience",
+    "description": "Experience the magic of Amboseli National Park with stunning views of Mount Kilimanjaro. Track elephant herds, spot lions, and capture award-winning photographs in Kenya's premier wildlife destination.",
+    "url": "https://simba-adventures.vercel.app/tours/amboseli-safari",
+    "touristType": ["Wildlife Photographers", "Nature Lovers", "Family Travelers"],
+    "containsPlace": {
+      "@type": "TouristDestination",
+      "name": "Amboseli National Park",
+      "description": "Famous for large elephant herds and views of Mount Kilimanjaro",
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -2.6527,
+        "longitude": 37.2606
+      },
+      "containedInPlace": {
+        "@type": "Country",
+        "name": "Kenya"
+      }
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "749",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock"
+    },
+    "duration": "P3D",
+    "provider": {
+      "@type": "TravelAgency",
+      "name": "Simba Adventures"
+    }
+  }
+  </script>
+
+  <!-- JSON-LD Structured Data: Custom Itinerary Product -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "@id": "https://simba-adventures.vercel.app/custom-safari",
+    "name": "Custom Safari Itinerary Builder",
+    "description": "Create your perfect Kenya safari with our customizable itinerary builder. Choose destinations (Maasai Mara, Amboseli, Mount Kenya), set your budget, select accommodation style, and let our experts craft your dream adventure.",
+    "url": "https://simba-adventures.vercel.app/custom-safari",
+    "category": "Travel Services > Custom Tours",
+    "brand": {
+      "@type": "Brand",
+      "name": "Simba Adventures"
+    },
+    "offers": {
+      "@type": "AggregateOffer",
+      "lowPrice": "500",
+      "highPrice": "10000",
+      "priceCurrency": "USD",
+      "offerCount": "50",
+      "availability": "https://schema.org/InStock"
+    },
+    "additionalProperty": [
+      {
+        "@type": "PropertyValue",
+        "name": "Customization Options",
+        "value": "Destinations, Duration, Accommodation, Activities, Guides"
+      },
+      {
+        "@type": "PropertyValue",
+        "name": "Popular Destinations",
+        "value": "Maasai Mara, Amboseli, Mount Kenya, Lake Nakuru, Samburu"
+      },
+      {
+        "@type": "PropertyValue",
+        "name": "Booking Security",
+        "value": "SSL Encrypted, Secure Payment Gateway, Money-back Guarantee"
+      }
+    ],
+    "review": [
+      {
+        "@type": "Review",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "5",
+          "bestRating": "5"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Sarah Johnson"
+        },
+        "reviewBody": "The custom itinerary process was seamless. Our guide knew exactly what we wanted!"
+      }
+    ]
+  }
+  </script>
+
+  <!-- JSON-LD: FAQPage Schema for AI Query Optimization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "How do I book a secure safari in Kenya?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Booking a secure safari in Kenya with Simba Adventures is simple: 1) Browse our curated safari packages or use our custom itinerary builder, 2) Select your preferred dates and group size, 3) Complete your booking with our SSL-encrypted payment system supporting credit cards, M-Pesa, and PayPal, 4) Receive instant confirmation and your detailed itinerary. All bookings include our money-back guarantee and 24/7 customer support."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is the best time to visit Maasai Mara for the Great Migration?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The Great Migration in Maasai Mara typically occurs from July to October, with the peak river crossings happening in August and September. Simba Adventures offers specialized Migration Safari packages during this period with expert guides who track the herds' movements daily."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I customize my safari itinerary?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes! Simba Adventures specializes in fully customizable safari itineraries. You can choose from destinations like Maasai Mara, Amboseli, Mount Kenya, and more. Select your accommodation style (luxury lodges, tented camps, or budget options), activities, and duration. Our experts will craft a personalized adventure within your budget."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it safe to book a safari online in Kenya?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Absolutely. Simba Adventures uses industry-standard SSL encryption for all transactions. We offer secure payment options including credit cards, M-Pesa, PayPal, and bank transfers. All tours are operated by licensed guides, and we provide comprehensive travel insurance options and 24/7 emergency support."
+        }
+      }
+    ]
+  }
+  </script>
+
+  <!-- JSON-LD: WebSite Schema with SearchAction -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "@id": "https://simba-adventures.vercel.app/#website",
+    "url": "https://simba-adventures.vercel.app",
+    "name": "Simba Adventures",
+    "description": "Book secure safari and adventure tours in Kenya and East Africa",
+    "publisher": {
+      "@id": "https://simba-adventures.vercel.app/#organization"
+    },
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": {
+        "@type": "EntryPoint",
+        "urlTemplate": "https://simba-adventures.vercel.app/tours?search={search_term_string}"
+      },
+      "query-input": "required name=search_term_string"
+    },
+    "inLanguage": "en-US"
+  }
+  </script>
 
 </head>
 
